Update on Overleaf.

--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -113,7 +113,7 @@ The sequencing of Neandertal \citep{green_draft_2010,prufer_complete_2013,prufer
 
 In addition, all non-Africans carry genomic segments that are very similar to the sequenced archaic genomes. As these putative \emph{admixture segments} are up to several hundred kilobases (kb) in length, they are unlikely to predate the split of modern humans from Neandertals and Denisovans. Rather, they entered the modern human populations later through gene flow \citep{sankararaman_date_2012, sankararaman_genomic_2014, sankararaman_combined_2016, vernot_resurrecting_2014, vernot_excavating_2016, skov_detecting_2018, skov_nature_2020}. 
 
-Conceptually, these admixture segments arise through recombination: The offsprings of an archaic and modern human parent will have full chromosomes of either ancestry. If this individual has offspring in a largely modern human population, meiotic recombination progressively breaks the archaic chromosome down into smaller and smaller segments, whose size decrease with time \citep{falush_inference_2003, liang_lengths_2014, gravel_population_2012}. Correspondingly, early modern humans such as the 45,000 year old \textit{Ust'Ishim} individual have much longer admixture segments than present-day people \citep{fu_genome_2014}. Assuming that recombination events are independent from each other, the expected length of these admixture segments is roughly inversely proportional to the number of generations since gene flow happened. Hence, using this ``recombination clock'', the length distribution of introgressed chromosomal segments can be used to infer the time of an
+Conceptually, these admixture segments arise through recombination: The offspring of an archaic and modern human parent will have full chromosomes of either ancestry. If this individual has offspring in a largely modern human population, meiotic recombination progressively breaks the archaic chromosome down into smaller and smaller segments, whose size decrease with time \citep{falush_inference_2003, liang_lengths_2014, gravel_population_2012}. Correspondingly, early modern humans such as the 45,000 year old \textit{Ust'Ishim} individual have much longer admixture segments than present-day people \citep{fu_genome_2014}. Assuming that recombination events are independent from each other, the expected length of these admixture segments is roughly inversely proportional to the number of generations since gene flow happened. Hence, using this ``recombination clock'', the length distribution of introgressed chromosomal segments can be used to infer the time of an
 admixture event \citep{moorjani_history_2011,pugach_dating_2011,sankararaman_date_2012,loh_inferring_2013,sankararaman_combined_2016,pugach_gateway_2018,jacobs_multiple_2019,hellenthal_genetic_2014,pool_inference_2009,moorjani_history_2011,gravel_population_2012,liang_lengths_2014}.
 
 Here, we primarily focus on the overlap of Neandertals and modern humans in Eurasia, and the timing of the resulting gene flow. As no Neandertals have been found in Africa, the potential period of contact starts with the Out-Of-Africa event, whereas the latest gene flow would be the disappearance of Neandertals. The earliest modern human remains outside of Africa are directly dated to around 188 thousand years ago (kya)  using a combination of uranium-thorium, uranium-series and electron spin resonance dating techniques  \citep{stringer_when_2018,hershkovitz_earliest_2018} and a possible extinction of Neandertals is suggested to be around 37 kya (radiocarbon and luminescent dating of a Neandertal site in Spain \citep{zilhao_precise_2017}) and 39 kya (radiocarbon dates of Neandertal sites across Europe \citep{higham_timing_2014}). This leaves a potential time frame for Neandertal and modern human interaction of approximately 140,000 years. However, direct evidence of modern humans and Neandertals in the same geographical location at the same time is much spottier; in Europe, for example Neandertals and modern humans likely overlapped only for less than 10,000 years \citep{bard_extended_2020}. Detailed genetic dating of when Neandertals and modern human admixture started and ended could thus make the dating of these events more precise.
@@ -130,7 +130,7 @@ The first step in dating admixture events from genetic data is therefore estimat
 
 Thus, methods using admixture-induced linkage disequilibrium (ALD) are more widely used \citep{moorjani_history_2011,sankararaman_date_2012,sankararaman_combined_2016}. As admixture introduces entire chromosomes, variants that result from the differences between the parental chromosomes are all in linkage disequilibrium (LD) \citep{chakraborty_admixture_1988,stephens_mapping_1994,wall_detecting_2000}. As recombination decreases the size of admixture segments over time, the linkage decreases correspondingly \citep{patterson_methods_2004}. 
 
-In case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from an ancestral population, or LD caused by bottlenecks and genetic drift after the split of the parental populations \citep{moorjani_history_2011,sankararaman_date_2012}. For ancient admixture events however, ALD is quite similar to the genomic background \citep{sankararaman_date_2012}. To partially circumvent this issue for dating the Neandertal-human admixture time, variants are ascertained such that only  markers that are (nearly) differentially fixed between the two groups are used 
+In case of a recent admixture event a few tens of generations ago, ALD stretches  over long genetic distances and is therefore easily distinguishable from short range LD due to inheritance of chromosomal segments from an ancestral population, or LD caused by bottlenecks and genetic drift after the split of the parental populations \citep{moorjani_history_2011}. For ancient admixture events however, ALD is quite similar to the genomic background. To partially circumvent this issue for dating the Neandertal-human admixture time, variants are ascertained such that only  markers that are (nearly) differentially fixed between the two groups are used 
 \citep{sankararaman_date_2012}. 
 
 Typically, estimation of admixture dates proceeds by fitting a decay curve of pairwise LD as a function of genetic distance, using an exponential distribution whose parameter is informative for the time of an admixture pulse \citep{moorjani_history_2011,loh_inferring_2013}. 
@@ -145,7 +145,7 @@ Using inferred segments, it was found that the amount of Neandertal ancestry is 
 
 
 
-An example of an additional Neandertal gene flow private to a local population is the identification of admixture segments spanning several million bp in \textit{Oase 1}, the genome of an early modern human from Romania. He had a recent Neandertal ancestor less then 200 years before he lived (~37–42 kya by direct radiocarbon dating), later than the age of the \textit{Ust'Ishim} and \textit{Kostenki 14} early modern humans which are already admixed with Neadertals \citep{fu_early_2015}.
+An example of an additional Neandertal gene flow private to a local population is the identification of admixture segments spanning several million bp in \textit{Oase 1}, the genome of an early modern human from Romania. He had a recent Neandertal ancestor less than 200 years before he lived (~37–42 kya by direct radiocarbon dating), later than the age of the \textit{Ust'Ishim} modern human which is already admixed with Neadertals. \textit{Oase 1} did however not contribute substantially to present-day populations  \citep{fu_genome_2014,fu_early_2015}.
 
 
 The admixture time between Denisovans and the ancestors of Oceanians is estimated to have occurred at a similar time point as the Neandertal admixture, and has been estimated to  lie between 44 -- 54 kya using the ALD
@@ -165,13 +165,13 @@ Most of these inferences were done using an admixture pulse model, which assumes
 
 \subsection{Previous attempts of a general admixture model and ours}\label{Previous attempts of a general admixture model and ours}
 
-The extended pulse model is a generalization of the simple admixture pulse model. One alternative to the extended pulse model is to use a discrete mixture of multiple admixture pulses. This is especially useful if the events are very distinct in time, e.g. if one event is only a few generations back, and the other pulse occurred hundreds of generations ago \cite{fu_genome_2014,slon_genome_2018}. In this case, the admixture segments will be either very long if they are recent, or much shorter if they are older. It is also very useful if the two admixing sources are divergence from one another or the admixture proportions are of different magnitude. However, this model requires at least three parameters (two admixture times and relative admixture strength), and thus is more complex than the extended pulse model. 
+The extended pulse model is a generalization of the simple admixture pulse model. One alternative to the simple pulse model is to use a discrete mixture of multiple admixture pulses. This is especially useful if the events are very distinct in time, e.g. if one event is only a few generations back, and the other pulse occurred hundreds of generations ago \citep{fu_genome_2014,slon_genome_2018}. In this case, the admixture segments will be either very long if they are recent, or much shorter if they are older. It is also very useful if the two admixing sources are divergence from one another or the admixture proportions are of different magnitude. However, this model requires at least three parameters (two admixture times and relative admixture strength), and thus is more complex than the extended pulse model. 
 
 Zhou et al. 2017 \citep{zhou_modeling_2017} showed that this model, in principle, can be used for continuous mixtures as well, using a polynomial function as a mixture density. However, they found that even for relatively short admixture events, the large number of parameters led to an underestimate of admixture duration \citep{zhou_inference_2017}, and the beginning and end of admixture were not well inferred
 \citep{zhou_modeling_2017,zhou_inference_2017}. 
 
 Here we use a simpler model of continuous admixture with just two parameters, and one less than the two-pulse model of Pickrell et al. 2014 \citep{pickrell_ancient_2014}. One parameter reflects the mean admixture time, and the other the duration of the admixture event; letting this parameter go to zero thus recovers the (nested) simple pulse model. 
-This model is particularly simple if we assume that migration rate over time is Gamma distributed, in which case the distribution of admixture segment lengths has a closed form (Figure \ref{fig:fig1} C & D).
+This model is particularly simple if we assume that migration rate over time is Gamma distributed, in which case the distribution of admixture segment lengths has a closed form (Figure \ref{fig:fig1} C \& D).
 
 Nevertheless, this is a difficult problem, as it requires deconvoluting an exponential mixture, which is notoriously hard \citep{dasgupta_mixture_2008,hellenthal_genetic_2014}. Thus, we have to carefully evaluate potential sources of biases known from previous studies, namely the demography of the admixed population, the accuracy of the recombination map and the ascertainment scheme \citep{sankararaman_date_2012,fu_genome_2014,moorjani_genetic_2016}.
 We compare the extended pulse with the simple pulse model, to examine the implications of the one-generation assumption in relation to the aforementioned potential biases. We test when the simple pulse model can be contrasted for the more general model of an extended admixture pulse.
@@ -197,7 +197,7 @@ decay under the extended pulse model.}
 \end{figure}
 
 \section{Methods}\label{methods}
-In this section, we present formal definitions of the admixture models used. 
+
 We conducted simulations to assess the effect of continuous
 admixture compared to a pulse under ideal circumstances. 
 We also evaluated the impact of different recombination and demographic scenarios and the effect of different analysis parameters for estimates under an instantaneous pulse model.
@@ -207,8 +207,7 @@ enabling to obtain a duration of continuous admixture. We use both admixture mod
 
 \subsection{Admixture Models}\label{admixture models}
 
-First we need to describe the admixture models used.
-Here, we want to define the admixture model in terms of its segment-length distribution $l$ for a random variable $T$ giving the admixture time $t_{admix}$ over the time $t$. 
+In this section, we present formal definitions of the admixture models used.  Here, we want to define the admixture model in terms of its segment-length distribution $l$ for a random variable $T$ giving the admixture time $t_{admix}$ over the time $t$. 
 
 
 \begin{equation}
@@ -280,7 +279,7 @@ To get the likelihood function for the segment length distribution $P(L)$ under 
     P(L=l) = \int_{0}^{\infty} \frac{1}{\Gamma(k)(\frac{t_m}{k})^k}t^{k-1}e^{-t\frac{k}{t_m}}\ t\ e^{-tl} \ dt 
 \end{equation}
 
-we can factor out all term not depending on $t$:
+we can factor out all terms not depending on $t$:
 
 \begin{equation}
 \label{eq:Likelihood_function_extended_pulse_2}
