--- a/References/MyLibraryATE.bib
+++ b/References/MyLibraryATE.bib
@@ -1734,3 +1734,41 @@ An ancient human genome illuminates human demography in Eurasia and Europe.},
 	pages = {113--116},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/D9SYHMYM/Slon et al. - 2018 - The genome of the offspring of a Neanderthal mothe.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/FX55JKGJ/s41586-018-0455-x.html:text/html}
 }
+
+
+@article{sikora_ancient_2017,
+	title = {Ancient genomes show social and reproductive behavior of early {Upper} {Paleolithic} foragers},
+	copyright = {Copyright © 2017, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/early/2017/10/04/science.aao1807},
+	doi = {10.1126/science.aao1807},
+	abstract = {Present-day hunter-gatherers (HGs) live in multilevel social groups essential to sustain a population structure characterized by limited levels of within-band relatedness and inbreeding. When these wider social networks evolved among HGs is unknown. Here, we investigate whether the contemporary HG strategy was already present in the Upper Paleolithic (UP), using complete genome sequences from Sunghir, a site dated to {\textasciitilde}34 thousand years BP (kya) containing multiple anatomically modern human (AMH) individuals. We demonstrate that individuals at Sunghir derive from a population of small effective size, with limited kinship and levels of inbreeding similar to HG populations. Our findings suggest that UP social organization was similar to that of living HGs, with limited relatedness within residential groups embedded in a larger mating network.},
+	language = {en},
+	urldate = {2020-12-08},
+	journal = {Science},
+	author = {Sikora, Martin and Seguin-Orlando, Andaine and Sousa, Vitor C. and Albrechtsen, Anders and Korneliussen, Thorfinn and Ko, Amy and Rasmussen, Simon and Dupanloup, Isabelle and Nigst, Philip R. and Bosch, Marjolein D. and Renaud, Gabriel and Allentoft, Morten E. and Margaryan, Ashot and Vasilyev, Sergey V. and Veselovskaya, Elizaveta V. and Borutskaya, Svetlana B. and Deviese, Thibaut and Comeskey, Dan and Higham, Tom and Manica, Andrea and Foley, Robert and Meltzer, David J. and Nielsen, Rasmus and Excoffier, Laurent and Lahr, Marta Mirazon and Orlando, Ludovic and Willerslev, Eske},
+	month = oct,
+	year = {2017},
+	pmid = {28982795},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/PVR2DV8Q/Sikora et al. - 2017 - Ancient genomes show social and reproductive behav.pdf:application/pdf}
+}
+
+
+@article{sikora_population_2019,
+	title = {The population history of northeastern {Siberia} since the {Pleistocene}},
+	volume = {570},
+	copyright = {2019 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-019-1279-z},
+	doi = {10.1038/s41586-019-1279-z},
+	abstract = {Northeastern Siberia has been inhabited by humans for more than 40,000 years but its deep population history remains poorly understood. Here we investigate the late Pleistocene population history of northeastern Siberia through analyses of 34 newly recovered ancient genomes that date to between 31,000 and 600 years ago. We document complex population dynamics during this period, including at least three major migration events: an initial peopling by a previously unknown Palaeolithic population of ‘Ancient North Siberians’ who are distantly related to early West Eurasian hunter-gatherers; the arrival of East Asian-related peoples, which gave rise to ‘Ancient Palaeo-Siberians’ who are closely related to contemporary communities from far-northeastern Siberia (such as the Koryaks), as well as Native Americans; and a Holocene migration of other East Asian-related peoples, who we name ‘Neo-Siberians’, and from whom many contemporary Siberians are descended. Each of these population expansions largely replaced the earlier inhabitants, and ultimately generated the mosaic genetic make-up of contemporary peoples who inhabit a vast area across northern Eurasia and the Americas.},
+	language = {en},
+	number = {7760},
+	urldate = {2020-12-08},
+	journal = {Nature},
+	author = {Sikora, Martin and Pitulko, Vladimir V. and Sousa, Vitor C. and Allentoft, Morten E. and Vinner, Lasse and Rasmussen, Simon and Margaryan, Ashot and de Barros Damgaard, Peter and de la Fuente, Constanza and Renaud, Gabriel and Yang, Melinda A. and Fu, Qiaomei and Dupanloup, Isabelle and Giampoudakis, Konstantinos and Nogués-Bravo, David and Rahbek, Carsten and Kroonen, Guus and Peyrot, Michaël and McColl, Hugh and Vasilyev, Sergey V. and Veselovskaya, Elizaveta and Gerasimova, Margarita and Pavlova, Elena Y. and Chasnyk, Vyacheslav G. and Nikolskiy, Pavel A. and Gromov, Andrei V. and Khartanovich, Valeriy I. and Moiseyev, Vyacheslav and Grebenyuk, Pavel S. and Fedorchenko, Alexander Yu and Lebedintsev, Alexander I. and Slobodin, Sergey B. and Malyarchuk, Boris A. and Martiniano, Rui and Meldgaard, Morten and Arppe, Laura and Palo, Jukka U. and Sundell, Tarja and Mannermaa, Kristiina and Putkonen, Mikko and Alexandersen, Verner and Primeau, Charlotte and Baimukhanov, Nurbol and Malhi, Ripan S. and Sjögren, Karl-Göran and Kristiansen, Kristian and Wessman, Anna and Sajantila, Antti and Lahr, Marta Mirazon and Durbin, Richard and Nielsen, Rasmus and Meltzer, David J. and Excoffier, Laurent and Willerslev, Eske},
+	month = jun,
+	year = {2019},
+	pages = {182--188},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/TW8FG4JW/Sikora et al. - 2019 - The population history of northeastern Siberia sin.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/AEXVDSD5/s41586-019-1279-z.html:text/html}
+}
